# hslogic

./: LICENSE  README.md  default.nix  hslogic.cabal  stack.yaml
app/: hslogic.hs
src/: hslogic.hs
src/Hslogic/: Parse.hs  Run.hs  Solve.hs  Types.hs  Unify.hs
test/: hslogic-test.hs
test/Hslogic/: ParseSpec.hs  TypesSpec.hs  TypesSpec.hs~
