Name:                 hslogic
Version:              1.0
Build-type:           Simple
Synopsis:             This is a sample project
License:              BSD3
License-file:         LICENSE
Author:               Arnaud Bailly <arnaud.oqube@gmail.com>
Cabal-version:        >= 1.2

Executable hslogic
  build-depends:      base,
                      pretty,
                      unordered-containers,
                      hashable,
                      utf8-string,
                      tuple,
                      parsec,
                      mtl,
                      ansi-terminal
  hs-source-dirs:     src
  main-is:            hslogic.hs
  ghc-options:        -Wall

Test-Suite hslogic-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          hslogic-test.hs
    build-depends:    base,
                      doctest,
                      directory


