Name:                 hslogic
Version:              1.0
Build-type:           Simple
Synopsis:             This is a sample project
License:              BSD3
License-file:         LICENSE
Author:               Arnaud Bailly <arnaud.oqube@gmail.com>
Cabal-version:        >= 1.8

Library
  build-depends:      base,
                      pretty,
                      containers,
                      unordered-containers,
                      hashable,
                      utf8-string,
                      parsec,
                      tuple,
                      mtl,
                      transformers,
                      ansi-terminal
  exposed-modules:    Hslogic.Types,
                      Hslogic.Parse,
                      Hslogic.Solve,
                      Hslogic.Unify
  hs-source-dirs:     src
  ghc-options:        -Wall

Executable hslogic
  build-depends:      base,
                      pretty,
                      containers,
                      unordered-containers,
                      hashable,
                      utf8-string,
                      parsec,
                      tuple,
                      mtl,
                      transformers,
                      ansi-terminal,
                      hslogic
  main-is:            hslogic.hs
  hs-source-dirs:     src
  ghc-options:        -Wall

Test-Suite hslogic-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Hslogic.TypesSpec
    hs-source-dirs:   test
    main-is:          hslogic-test.hs
    build-depends:    base,
                      doctest,
                      directory,
                      hslogic,
                      hspec,
                      mtl
    build-tool-depends: hspec-discover:hspec-discover
