Name:                 hslogic
Version:              1.0
Build-type:           Simple
Synopsis:             This is a sample project
License:              BSD3
License-file:         LICENSE
Author:               Arnaud Bailly <arnaud.oqube@gmail.com>
Cabal-version:        >= 1.8

Library
  build-depends:      base,
                      pretty,
                      containers,
                      unordered-containers,
                      hashable,
                      utf8-string,
                      parsec,
                      tuple,
                      mtl,
                      transformers,
                      ansi-terminal,
                      QuickCheck
  exposed-modules:    Hslogic.Types,
                      Hslogic.Parse,
                      Hslogic.Solve,
                      Hslogic.Unify,
                      Hslogic.Run

  hs-source-dirs:     src
  ghc-options:        -Wall

Executable hslogic
  build-depends:      base,
                      hslogic
  main-is:            hslogic.hs
  hs-source-dirs:     app
  ghc-options:        -Wall

Test-Suite hslogic-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Hslogic.TypesSpec,
                      Hslogic.ParseSpec
    hs-source-dirs:   test
    build-depends:    base,
                      directory,
                      hslogic,
                      hspec,
                      mtl,
                      QuickCheck
    build-tool-depends: hspec-discover:hspec-discover
